<resources>
    <string name="app_name">Librito Abierto</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="seleccione_el_tipo_de_transaccion">Seleccione el Tipo de Transacción</string>
    <string name="bienvenido">BIENVENIDO!</string>
    <string name="texto_bienvenida">Ingresa de nuevo, te hemos extrañado</string>
    <string name="correo">Correo</string>
    <string name="password">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="mensaje_bienvenida">Bienvenido a Librito Abierto</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="icon">Icon</string>
    <string name="image">Image</string>
    <string name="title_book_example">IT ENDS WITH US</string>
    <string name="book_author_example">Colleen Hoover</string>
    <string name="copy_quantity_example">Ejemplares Disponibles:</string>
    <string name="quantity_example">5</string>
    <string name="reservar">Reservar</string>
    <string name="prestar">Prestar</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="summary_example">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="fecha_de_devolucion">Fecha de Devolución:</string>
    <string name="titulo">Título:</string>
    <string name="fecha_de_prestamo">Fecha de Préstamo:</string>
    <string name="cantidad">Cantidad:</string>
    <string name="realizar_prestamo">Realizar Prestamo</string>
    <string name="ingrese_correo">Ingrese Correo del Usuario</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="opcion">Opcion</string>
    <string name="indicaciones_crear_cuenta">Completa los siguientes campos</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="tipo_de_transaccion">Tipo de Transacción:</string>
    <string name="usuario">Usuario:</string>
    <string name="cantidad_de_ejemplares">Cantidad de Ejemplares:</string>
    <string name="estado">Estado:</string>
    <string name="efectuar_devolucion">Efectuar Devolución</string>
    <string name="titulo_libro">Título del Libro:</string>
    <string name="efectuar_prestamo">Efectuar Préstamo</string>
    <string name="slogan">Tu biblioteca en una sola App</string>
    <string name="default_quantity">1</string>

</resources>