<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <ImageView
            android:id="@+id/imagenDetalle"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/image" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/libroDetalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_book_example"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/autorDetalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_author_example"
                android:textSize="18sp"
                android:textStyle="italic"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/copy_quantity_example"
                    android:layout_marginEnd="5dp"
                    />
                <TextView
                    android:id="@+id/ejemplares"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity_example"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btnReservar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reservar"
                    app:cornerRadius = "20dp"
                    android:layout_marginEnd="5dp"
                    />
                <Button
                    android:id="@+id/btnPrestar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prestar"
                    app:cornerRadius = "20dp"
                    />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/sinopsis"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/descripDetalle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/summary_example"
                android:textSize="16sp"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>