<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/gradient_background"
    tools:context=".PrincipalActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/logo"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/icon" />
    <TextView
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/mensaje_bienvenida"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="10dp"
        />
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/crear_cuenta"
        android:textColor="#005bea"
        app:cornerRadius = "20dp"
        android:layout_marginTop="150dp"
        android:onClick="crearCuenta"
        />
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion"
        android:textColor="@android:color/white"
        style="?attr/materialButtonOutlinedStyle"
        app:strokeColor = "@android:color/white"
        app:cornerRadius = "20dp"
        android:layout_marginTop="5dp"
        android:onClick="inicioSesion"
        />

</LinearLayout>