<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="5dp"
    tools:context=".fragment.AgregarPrestamosAdminFragment"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="50dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="50dp"
            >
            //LEFT
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/titulo"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:text="@string/correo"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:gravity="center"
                    android:text="@string/fecha_de_prestamo"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:gravity="center"
                    android:text="@string/fecha_de_devolucion"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:gravity="center"
                    android:text="@string/cantidad"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    />
            </LinearLayout>
            //RIGHT
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/tituloLibro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    />
                <EditText
                    android:id="@+id/correoPrestamo"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/ingrese_correo"
                    android:importantForAutofill="no" />
                <Button
                    android:id="@+id/fechaPr"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    />
                <Button
                    android:id="@+id/fechaDev"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="start"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    />
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/ejecutarPrestamo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/realizar_prestamo"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>