<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/ic_back"
            android:backgroundTint="#005bea"
            android:onClick="volverPaginaPrincipal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crear_cuenta"
            android:textSize="24sp"
            android:textColor="#005bea"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indicaciones_crear_cuenta"
        android:textSize="16sp"
        android:textColor="#005bea"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        />
    //Name
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="#005bea"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="50dp"
        android:hint="@string/nombre"
        android:textColorHint="#005bea"
        app:errorEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>
    //Last Name
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="#005bea"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="50dp"
        android:hint="@string/apellido"
        android:textColorHint="#005bea"
        app:errorEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>
    //User Name
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="#005bea"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="50dp"
        android:hint="@string/correo"
        android:textColorHint="#005bea"
        app:errorEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>
    //Password
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="#005bea"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="50dp"
        android:hint="@string/password"
        android:textColorHint="#005bea"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#005bea"
            android:text="@string/crear_cuenta"
            android:textColor="@color/white"
            app:cornerRadius = "20dp"
            android:layout_marginTop="75dp"
            android:onClick="crearCuenta"
            />
    </LinearLayout>


</LinearLayout>